# server/routes/admin.js
@@ -1,10 +1,11 @@
 import express from 'express';
 import { isAdmin } from '../middlewares/isAdmin.js'
-import { getUsers } from '../controllers/admin.js'
+import { getUsers, getUserById } from '../controllers/admin.js'
 
 
 const router = express.Router();
 router.get('/admin/users', isAdmin, getUsers)
+router.get('/admin/:id', isAdmin, getUserById)
 
 
 
